GET 附近飲水機 API、匯入json到資料庫腳本
